# docs/swagger.yaml
@@ -84,7 +84,33 @@ paths:
       summary: Saying hello
       tags:
       - Tests
-  /v1/auth:
+  /v1/auth/refresh:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/views.TokensResponse'
+        "400":
+          description: Couldn't find token
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+        "404":
+          description: Couldn't find user
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+        "500":
+          description: Couldn't create tokens
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+      summary: Refresh
+      tags:
+      - Auth
+  /v1/auth/sign-in:
     post:
       consumes:
       - application/json
@@ -119,6 +145,26 @@ paths:
           schema:
             $ref: '#/definitions/views.ErrorResponse'
       summary: Sign In
+      tags:
+      - Auth
+  /v1/auth/sign-out:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Couldn't find token
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+        "500":
+          description: Couldn't create tokens
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+      summary: Sign Out
       tags:
       - Auth
   /v1/users:
